k8s/mssql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-storage
              mountPath: /var/opt/mssql
      volumes:
        - name: mssql-storage
          persistentVolumeClaim:
            claimName: mssql-claim-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  b # https://kubernetes.io/docs/concepts/workloads/controllers/job/
  apiVersion: batch/v1
  kind: Job
  metadata:
    name: myjob
    namespace: default
    labels:
      app: myjob
  spec:
    template:
      metadata:
        name: myjob
        labels:
          app: myjob
      spec:
        containers:
        - name: myjob
          image: python:3.7.6-alpine3.10
          command: ['sh', '-c', 'python3 manage.py makemigrations && python3 manage.py migrate']
          env:
          - name: ENV_NAME
            value: ENV_VALUE
          volumeMounts:
          - name: localtime
            mountPath: /etc/localtime
        volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei
        restartPolicy: OnFailure
        dnsPolicy: ClusterFirst
  ---
  
  type: ClusterIP
  selector:
    app: mssql
  ports:
  - name: mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
