k8s/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-np-srv
  namespace: default # Ensure the resource is created in the default namespace
spec:
  type: NodePort
  selector:
    app: platformservice # Must match the labels in your Deployment
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31515
